Use separation key hostname for type node

--- a/backend/sample.config.json
+++ b/backend/sample.config.json
@@ -687,9 +687,9 @@
             "SampleInterval": "",
             "Unit": "Packet/s",
             "DisplayName": "Infiniband Packets Received",
-            "FilterFunc": "",
+            "FilterFunc": "|\u003e filter(fn: (r) =\u003e r[\"device\"] == \"mlx5_0\")",
             "PostQueryOp": "|\u003e derivative(unit: 1s, nonNegative: true, columns: [\"_value\"], timeColumn: \"_time\")",
-            "SeparationKey": "device",
+            "SeparationKey": "hostname",
             "MaxPerNode": 0,
             "MaxPerType": 0,
             "PThreadAggFn": ""
@@ -706,9 +706,9 @@
             "SampleInterval": "",
             "Unit": "Packet/s",
             "DisplayName": "Infiniband Packets Send",
-            "FilterFunc": "",
+            "FilterFunc": "|\u003e filter(fn: (r) =\u003e r[\"device\"] == \"mlx5_0\")",
             "PostQueryOp": "|\u003e derivative(unit: 1s, nonNegative: true, columns: [\"_value\"], timeColumn: \"_time\")",
-            "SeparationKey": "device",
+            "SeparationKey": "hostname",
             "MaxPerNode": 0,
             "MaxPerType": 0,
             "PThreadAggFn": ""
@@ -744,9 +744,9 @@
             "SampleInterval": "",
             "Unit": "B/s",
             "DisplayName": "Infiniband Traffic Received",
-            "FilterFunc": "",
+            "FilterFunc": "|\u003e filter(fn: (r) =\u003e r[\"device\"] == \"mlx5_0\")",
             "PostQueryOp": "|\u003e derivative(unit: 1s, nonNegative: true, columns: [\"_value\"], timeColumn: \"_time\")",
-            "SeparationKey": "device",
+            "SeparationKey": "hostname",
             "MaxPerNode": 25000000000,
             "MaxPerType": 25000000000,
             "PThreadAggFn": ""
@@ -763,9 +763,9 @@
             "SampleInterval": "",
             "Unit": "B/s",
             "DisplayName": "Infiniband Traffic Send",
-            "FilterFunc": "",
+            "FilterFunc": "|\u003e filter(fn: (r) =\u003e r[\"device\"] == \"mlx5_0\")",
             "PostQueryOp": "|\u003e derivative(unit: 1s, nonNegative: true, columns: [\"_value\"], timeColumn: \"_time\")",
-            "SeparationKey": "device",
+            "SeparationKey": "hostname",
             "MaxPerNode": 25000000000,
             "MaxPerType": 25000000000,
             "PThreadAggFn": ""
